# mahanai

./: .gitignore  .mahanairc  CLAUDE.md  LICENSE.txt  MAHANAI.md  PERSONALITY.md  PKG-INFO  README.md  SECURITY.md  colors_and_type.css  docs.html  example-mahanai-mahmod.mmd  example-mahanai-plugin.mai  index-BZvdGidb.js  index-CTPPWBX_.js  index-CgAkdmJA.css  index.html  mahanai.spec  pyproject.toml  test_plugin_security.py  webui.html
.claude/: settings.local.json
.github/workflows/: workflow.yml
assets/: index-BZvdGidb.js  index-CgAkdmJA.css
mahanai/: __init__.py  __main__.py  agent.py  chat_history.py  cli_signer.py  colors.py  config.py  mai_parser.py  mmd_parser.py  plugin_audit.py  plugin_security.py  plugin_signer.py  rc_parser.py  server.py  store.py  store_security.py  system_info.py  tools.py
mahanai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
