[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahanai"
version = "7.1.0"
description = "MahanAI: terminal AI agent for NVIDIA NIM (OpenAI-compatible), tools, streaming, /api-key, safety prompts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MahanAI" }]
keywords = ["ai", "cli", "nvidia", "nim", "openai", "agent", "llm"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "openai>=1.40.0",
"python-dotenv>=1.0.0",
  "colorama>=0.4.6",
  "httpx>=0.27.0",
  "rich>=13.0.0",
]

[project.scripts]
mahanai = "mahanai.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mahanai*"]
